Adds charges for water and ions

--- a/mol2-to-prmtop.ipynb
+++ b/mol2-to-prmtop.ipynb
@@ -42,17 +42,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 144,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-05T19:44:46.020014Z",
-     "start_time": "2018-02-05T19:44:46.010748Z"
+     "end_time": "2018-02-05T20:56:22.107670Z",
+     "start_time": "2018-02-05T20:56:22.093725Z"
     }
    },
    "outputs": [],
    "source": [
     "def load_mol2(filename, name=None, add_tripos=True):\n",
     "    ifs = oemolistream()\n",
+    "    molecules = []\n",
     "    if not ifs.open(filename):\n",
     "        print(f'Unable to open {filename} for reading...')\n",
     "    for mol in ifs.GetOEMols():\n",
@@ -60,18 +61,19 @@
     "            OETriposAtomNames(mol)\n",
     "        if name:\n",
     "            mol.SetTitle(name)\n",
-    "    return mol"
+    "        # Add all the molecules in this file to a list, but only return the first one.\n",
+    "        molecules.append(OEMol(mol))\n",
+    "    return molecules[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 145,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-05T19:44:46.782438Z",
-     "start_time": "2018-02-05T19:44:46.778881Z"
-    },
-    "collapsed": true
+     "end_time": "2018-02-05T20:56:22.274570Z",
+     "start_time": "2018-02-05T20:56:22.270286Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -80,11 +82,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 146,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-05T19:44:47.325692Z",
-     "start_time": "2018-02-05T19:44:47.322711Z"
+     "end_time": "2018-02-05T20:56:22.415590Z",
+     "start_time": "2018-02-05T20:56:22.412194Z"
     },
     "collapsed": true
    },
@@ -95,11 +97,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 147,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-05T19:44:47.709466Z",
-     "start_time": "2018-02-05T19:44:47.706734Z"
+     "end_time": "2018-02-05T20:56:22.529183Z",
+     "start_time": "2018-02-05T20:56:22.525378Z"
     },
     "collapsed": true
    },
@@ -117,11 +119,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 148,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-05T19:44:48.570540Z",
-     "start_time": "2018-02-05T19:44:48.553919Z"
+     "end_time": "2018-02-05T20:56:23.249671Z",
+     "start_time": "2018-02-05T20:56:23.227784Z"
     }
    },
    "outputs": [],
@@ -133,13 +135,16 @@
     "        molecules.append(process_smiles(molecule))\n",
     "    return molecules\n",
     "\n",
-    "def process_smiles(string, name=None, add_hydrogens=True, add_tripos=True):\n",
+    "def process_smiles(string, name=None, add_hydrogens=True, add_tripos=True, charge=True):\n",
     "    mol = OEMol()\n",
     "    OESmilesToMol(mol, string)\n",
     "    if add_hydrogens:\n",
     "        OEAddExplicitHydrogens(mol)\n",
     "    if add_tripos:\n",
     "        OETriposAtomNames(mol)\n",
+    "    if charge:\n",
+    "        for atom in mol.GetAtoms():\n",
+    "            atom.SetPartialCharge(atom.GetFormalCharge())\n",
     "    if name:\n",
     "        mol.SetTitle(name)\n",
     "    return mol"
@@ -147,11 +152,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 149,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-05T19:44:49.021070Z",
-     "start_time": "2018-02-05T19:44:49.018093Z"
+     "end_time": "2018-02-05T20:56:23.390726Z",
+     "start_time": "2018-02-05T20:56:23.387740Z"
     }
    },
    "outputs": [],
@@ -161,11 +166,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 150,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-05T19:44:49.468779Z",
-     "start_time": "2018-02-05T19:44:49.466375Z"
+     "end_time": "2018-02-05T20:56:23.887769Z",
+     "start_time": "2018-02-05T20:56:23.885160Z"
     },
     "collapsed": true
    },
@@ -176,94 +181,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-02-05T19:19:48.836351Z",
-     "start_time": "2018-02-05T19:19:48.825433Z"
-    }
-   },
+   "metadata": {},
    "source": [
-    "# Add charges (?)"
+    "At this point, the molecules have been converted to `OEMol`s and they have charges, but the coordinates are not set. We could use a docking procedure like [this](https://github.com/openforcefield/openforcefield/blob/master/examples/host_guest_simulation/smirnoff_host_guest.ipynb) to set the position of the host and guest, or we could take the coordinates from an existing fully solvated system. I'm going to attempt the latter approach, because in general, we are not going to want to use a docking calculation to provide the coordinate for intermediate attach-pull-relase windows, where the host and guest are not  closely bound to each other."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-02-05T19:44:55.116389Z",
-     "start_time": "2018-02-05T19:44:55.113812Z"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "tmp = molecules[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-02-05T19:44:55.492929Z",
-     "start_time": "2018-02-05T19:44:55.483224Z"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'GetPartialCharge'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-34-31a8f9f1ea92>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtmp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGetAtom\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mOEHasAtomIdx\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGetPartialCharge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'GetPartialCharge'"
-     ]
-    }
-   ],
-   "source": [
-    "tmp.GetAtom(OEHasAtomIdx(1)).GetPartialCharge()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-02-05T19:45:18.798726Z",
-     "start_time": "2018-02-05T19:45:18.795025Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tmp.GetMaxAtomIdx()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-02-05T19:45:34.909947Z",
-     "start_time": "2018-02-05T19:45:34.907345Z"
-    },
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "tmp.GetAtom(OEHasAtomIdx(10))"
+    "# Read in (existing) coordinates to set the positions of the `OEMol`s"
    ]
   },
   {
