Adds exporting to `prmtop`, but issues remain, noted in the notebook

--- a/mol2-to-prmtop.ipynb
+++ b/mol2-to-prmtop.ipynb
@@ -399,24 +399,33 @@
     }
    },
    "source": [
-    "# Setup the OpenMM system"
+    "# Setup the force field and create an OpenMM `System` with the topology and molecules"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One suggestion to get rid of the error `AttributeError: 'NoneType' object has no attribute 'used'` when trying to save the `System` as a `prmtop` from @swails is to use `rigidWater=False`: https://github.com/ParmEd/ParmEd/issues/930. In this case, it does not alleviate the issue, but leaving it on here does not seem to have any deleterious effects at the moment."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 233,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-05T23:03:16.040858Z",
-     "start_time": "2018-02-05T23:03:14.004131Z"
+     "end_time": "2018-02-05T23:10:45.009772Z",
+     "start_time": "2018-02-05T23:10:42.944283Z"
     }
    },
    "outputs": [],
    "source": [
     "ff = ForceField('forcefield/smirnoff99Frosst.ffxml', 'forcefield/tip3p.ffxml') \n",
-    "system = ff.createSystem(fixer.topology, molecules, nonbondedMethod = PME, \n",
-    "                         nonbondedCutoff = 1.1*unit.nanometer, \n",
-    "                         ewaldErrorTolerance = 1e-4)"
+    "system = ff.createSystem(fixer.topology, molecules, \n",
+    "                         nonbondedMethod=PME, \n",
+    "                         nonbondedCutoff=1.1*unit.nanometer, \n",
+    "                         ewaldErrorTolerance=1e-4,\n",
+    "                         rigidWater=False)"
    ]
   },
   {
@@ -428,11 +437,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 234,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-05T23:03:53.992230Z",
-     "start_time": "2018-02-05T23:03:48.706469Z"
+     "end_time": "2018-02-05T23:10:47.261512Z",
+     "start_time": "2018-02-05T23:10:45.951917Z"
     }
    },
    "outputs": [
@@ -461,19 +470,184 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Export the topology, system, and coordinates to AMBER files"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 243,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-05T23:33:44.386461Z",
+     "start_time": "2018-02-05T23:33:44.383512Z"
+    },
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import parmed as pmd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-05T23:33:45.706844Z",
+     "start_time": "2018-02-05T23:33:44.655894Z"
+    },
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "structure = pmd.openmm.topsystem.load_topology(fixer.topology, system, fixer.positions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-05T23:11:14.920414Z",
+     "start_time": "2018-02-05T23:10:50.897915Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'used'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-237-55afb428deb0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mstructure\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'generated/solvated_smirnoff.prmtop'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/data/applications/anaconda3/envs/openforcefield/lib/python3.6/site-packages/parmed/structure.py\u001b[0m in \u001b[0;36msave\u001b[0;34m(self, fname, format, overwrite, **kwargs)\u001b[0m\n\u001b[1;32m   1531\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1532\u001b[0m                     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1533\u001b[0;31m                         \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mamber\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAmberParm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_structure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1534\u001b[0m                     \u001b[0;32mexcept\u001b[0m \u001b[0mTypeError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1535\u001b[0m                         \u001b[0;32mif\u001b[0m \u001b[0;34m'Cannot translate exceptions'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/data/applications/anaconda3/envs/openforcefield/lib/python3.6/site-packages/parmed/amber/_amberparm.py\u001b[0m in \u001b[0;36mfrom_structure\u001b[0;34m(cls, struct, copy)\u001b[0m\n\u001b[1;32m    381\u001b[0m                 \u001b[0mdt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mphi_k\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    382\u001b[0m                 \u001b[0mdt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mper\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1.0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 383\u001b[0;31m         \u001b[0minst\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremake_parm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    384\u001b[0m         \u001b[0minst\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_set_nonbonded_tables\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnbfixes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    385\u001b[0m         \u001b[0mn_copy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minst\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpointers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'NCOPY'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/data/applications/anaconda3/envs/openforcefield/lib/python3.6/site-packages/parmed/amber/_amberparm.py\u001b[0m in \u001b[0;36mremake_parm\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    678\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_xfer_atom_info\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    679\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_xfer_residue_info\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 680\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_xfer_bond_info\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    681\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_xfer_angle_info\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    682\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_xfer_dihedral_info\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/data/applications/anaconda3/envs/openforcefield/lib/python3.6/site-packages/parmed/amber/_amberparm.py\u001b[0m in \u001b[0;36m_xfer_bond_info\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1559\u001b[0m             \u001b[0mbond_type\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mused\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1560\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mbond\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbonds\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1561\u001b[0;31m             \u001b[0mbond\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mused\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1562\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbond_types\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprune_unused\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1563\u001b[0m         \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'BOND_FORCE_CONSTANT'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mk\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mtype\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbond_types\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'used'"
+     ]
+    }
+   ],
+   "source": [
+    "structure.save('generated/solvated_smirnoff.prmtop')"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Export to AMBER"
+    "We see that there is still an issue with bond types, so @swails followed up with the suggestion of assigning these bonds to a dummy bond type and then later constraining them during the simulation. This does work to allow us to save the files, at least."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-05T23:34:47.270187Z",
+     "start_time": "2018-02-05T23:34:47.263772Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "bond_type = pmd.BondType(1.0, 1.0, list=structure.bond_types)\n",
+    "structure.bond_types.append(bond_type)\n",
+    "for bond in structure.bonds:\n",
+    "    if bond.type is None:\n",
+    "        bond.type = bond_type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-05T23:35:29.830702Z",
+     "start_time": "2018-02-05T23:35:29.824875Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File exists...\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    structure.save('generated/solvated_smirnoff.prmtop')\n",
+    "except OSError:\n",
+    "    print('File exists...')\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-05T23:35:44.788751Z",
+     "start_time": "2018-02-05T23:35:44.784407Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File exists...\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    structure.save('generated/solvated_smirnoff.inpcrd')\n",
+    "except OSError:\n",
+    "    print('File exists...')\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-05T23:36:01.862977Z",
+     "start_time": "2018-02-05T23:36:01.858578Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File exists...\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    structure.save('generated/solvated_smirnoff.mol2')\n",
+    "except OSError:\n",
+    "    print('File exists...')\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A few observations...\n",
+    "\n",
+    "- The generated `prmtop` file is huge (1.1G)\n",
+    "- There are no charges on the waters (because they don't have a formal charge, set above)\n",
+    "- The generated `mol2` file has numeric atom types"
    ]
   },
   {
